push weekend updates

--- a/ATTAINS/ExtractAssessments.ipynb
+++ b/ATTAINS/ExtractAssessments.ipynb
@@ -18,7 +18,8 @@
     "import os\n",
     "from arcgis.gis import GIS;\n",
     "import pandas as pd;\n",
-    "import requests;"
+    "import requests;\n",
+    "import openpyxl;"
    ]
   },
   {
@@ -146,7 +147,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outfile = 'output.xlsx';\n",
+    "\n",
+    "if os.path.exists('output.xlsx'):\n",
+    "    os.remove('output.xlsx');\n",
+    "    \n",
+    "wb = openpyxl.Workbook();\n",
+    "wb.remove(wb['Sheet']);\n",
+    "wb.create_sheet(\"Assessments\");\n",
+    "wb.create_sheet(\"Uses\");\n",
+    "wb.create_sheet(\"Parameters\");\n",
+    "wb.create_sheet(\"Parms2Uses\");\n",
+    "wb.create_sheet(\"Sources\");\n",
+    "wb.create_sheet(\"Sources2Causes\");\n",
+    "wb.create_sheet(\"Documents\");\n",
+    "wb.save(outfile);\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -206,13 +231,29 @@
       "O_MTRIBE 6\n",
       "SCEQ 9\n",
       "SFNOES 14\n",
-      "OREGONDEQ 2204\n"
+      "OREGONDEQ 2204\n",
+      "21PA 216070\n",
+      "PR_LAKES 358\n",
+      "RIDEM 882\n",
+      "21SC60WQ 2092\n",
+      "SDDENR 365\n",
+      "TDECWR 5787\n",
+      "TCEQMAIN 2619\n",
+      "UTAHDWQ 902\n",
+      "21VASWCB 8342\n",
+      "USVIST 177\n",
+      "1VTDECWQ 1121\n",
+      "WA_ECOLOGY 9883\n",
+      "WIDNR 34477\n",
+      "WVDEP 12123\n",
+      "WYDEQ 285\n"
      ]
     }
    ],
    "source": [
     "# For each orgid pull the assessments into a table\n",
     "ste_url = r\"https://attains.epa.gov/attains-public/api/assessments\"\n",
+    "cnt = 1;\n",
     "\n",
     "for index, row in pd_orgid.iterrows():\n",
     "    \n",
@@ -313,31 +354,39 @@
     "                });\n",
     "                \n",
     "    if len(assmnt) > 0:\n",
-    "        pd_assmnts  = pd_assmnts.append(assmnt);\n",
+    "        pd_assmnts  = pd_assmnts.head(0).append(assmnt);\n",
     "    if len(uses) > 0:\n",
-    "        pd_uses     = pd_uses.append(uses);\n",
+    "        pd_uses     = pd_uses.head(0).append(uses);\n",
     "    if len(parms) > 0:\n",
-    "        pd_parms    = pd_parms.append(parms);\n",
+    "        pd_parms    = pd_parms.head(0).append(parms);\n",
     "    if len(parm2use) > 0:\n",
-    "        pd_parm2use = pd_parms2use.append(parm2use);\n",
+    "        pd_parm2use = pd_parms2use.head(0).append(parm2use);\n",
     "    if len(srcs) > 0:\n",
-    "        pd_srcs     = pd_srcs.append(srcs);\n",
+    "        pd_srcs     = pd_srcs.head(0).append(srcs);\n",
     "    if len(src2caus) > 0:\n",
-    "        pd_src2caus = pd_src2caus.append(src2caus);\n",
+    "        pd_src2caus = pd_src2caus.head(0).append(src2caus);\n",
     "    if len(docs) > 0:\n",
-    "        pd_docs     = pd_docs.append(docs);\n",
+    "        pd_docs     = pd_docs.head(0).append(docs);\n",
     "    \n",
-    "    #if index > 1:\n",
+    "    book = openpyxl.load_workbook(outfile);\n",
+    "    writer = pd.ExcelWriter(outfile,engine='openpyxl');\n",
+    "    writer.book = book;\n",
+    "    writer.sheets = dict((ws.title, ws) for ws in book.worksheets);\n",
+    "    \n",
+    "    pd_assmnts.to_excel(writer ,sheet_name='Assessments');\n",
+    "    pd_uses.to_excel(writer    ,sheet_name='Uses');\n",
+    "    pd_parms.to_excel(writer   ,sheet_name='Parameters');\n",
+    "    pd_parm2use.to_excel(writer,sheet_name='Parms2Uses');\n",
+    "    pd_srcs.to_excel(writer    ,sheet_name='Sources');\n",
+    "    pd_src2caus.to_excel(writer,sheet_name='Sources2Causes');\n",
+    "    pd_docs.to_excel(writer    ,sheet_name='Documents');\n",
+    "    \n",
+    "    writer.save()\n",
+    "    del writer,book\n",
+    "    cnt = cnt + 1;\n",
+    "    \n",
+    "    #if cnt > 2:\n",
     "    #    break\n",
-    "            \n",
-    "with pd.ExcelWriter('output.xlsx') as writer:\n",
-    "    pd_assmnts.to_excel(writer, sheet_name='Assessments');\n",
-    "    pd_uses.to_excel(writer, sheet_name='Uses');\n",
-    "    pd_parms.to_excel(writer, sheet_name='Parameters');\n",
-    "    pd_parm2use.to_excel(writer, sheet_name='Parms2Uses');\n",
-    "    pd_srcs.to_excel(writer, sheet_name='Sources');\n",
-    "    pd_src2caus.to_excel(writer, sheet_name='Sources2Causes');\n",
-    "    pd_docs.to_excel(writer, sheet_name='Documents');\n",
     "    "
    ]
   },
