Add NLCD downloader and footprinter

--- a/SitingStaging/Esri SSURGO Download.ipynb
+++ b/SitingStaging/Esri SSURGO Download.ipynb
@@ -74,11 +74,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "src = r\"F:\\EsriSSURGO\\src\";\n",
+    "src = r\"F:\\SitingStagingCache\\EsriSSURGO\\src\";\n",
     "if not os.path.exists(src):\n",
     "    os.mkdir(src);\n",
     "    \n",
-    "trg = r\"F:\\EsriSSURGO\\trg\";\n",
+    "trg = r\"F:\\SitingStagingCache\\EsriSSURGO\\trg\";\n",
     "if not os.path.exists(trg):\n",
     "    os.mkdir(trg);\n",
     "    \n",
