--- a/SitingStaging/NLCD2016 Footprints.ipynb
+++ b/SitingStaging/NLCD2016 Footprints.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,16 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1363"
+       "1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,17 +43,17 @@
     "fp_path  = r\"F:\\SitingStagingCache\";\n",
     "fp_fgdb  = r\"footprint.gdb\";\n",
     "fp_full  = fp_path + os.sep + fp_fgdb;\n",
-    "fp_layer = \"NED13\";\n",
-    "fp_trg   = fp_path + os.sep + \"NED13\" + os.sep + \"trg\";\n",
+    "fp_layer = \"NLCD2016\";\n",
+    "fp_trg   = fp_path + os.sep + \"NLCD2016\" + os.sep + \"trg\";\n",
     "\n",
-    "resources = [f.name for f in os.scandir(fp_trg) if f.is_dir()];\n",
+    "resources = [f.name for f in os.scandir(fp_trg) if not f.is_dir() and f.name[-4:] == '.img'];\n",
     "\n",
     "len(resources)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,22 +80,21 @@
     "         ['resource_name' ,'TEXT' ,'Resource_Name'  ,255, None,'']\n",
     "        ,['resource_path' ,'TEXT' ,'Resource_Path'  ,255, None,'']\n",
     "     ]\n",
-    ");\n",
-    "    "
+    ");\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'footprints generated'"
+       "'footprint generated'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,13 +106,8 @@
     ");\n",
     "\n",
     "for item in resources:\n",
-    "    \n",
-    "    if len(item) == 7:\n",
-    "        img = 'img' + item + '_13.img';\n",
-    "    else:\n",
-    "        img = item + '.img';\n",
     "        \n",
-    "    raster = fp_trg + os.sep + item + os.sep + img;\n",
+    "    raster = fp_trg + os.sep + item;\n",
     "    \n",
     "    ar = arcpy.Raster(raster);\n",
     "    ll = getattr(ar.extent,\"lowerLeft\");\n",
@@ -131,19 +125,48 @@
     "    \n",
     "    fp = arcpy.Polygon(rg,ar.spatialReference);\n",
     "    \n",
-    "    cursor.insertRow([img,raster,fp]);\n",
+    "    fp = fp.densify(\"DISTANCE\",50,0);\n",
+    "    \n",
+    "    cursor.insertRow([item,raster,fp]);\n",
     "\n",
     "if cursor:\n",
     "    del cursor;\n",
     "    \n",
-    "'footprints generated'"
+    "'footprint generated'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "361ae22184cd4cb48996e89910fb6f02",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "MapView(layout=Layout(height='400px', width='100%'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"map-static-img-preview-650360c5-742d-4e1c-a6d4-15666da9d0ca\"><img src=\"\"></img></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "gis = GIS();\n",
     "sdf = pd.DataFrame.spatial.from_featureclass(fp_full + os.sep + fp_layer);\n",
@@ -153,13 +176,12 @@
     "     kind = 'map'\n",
     "    ,map_widget = wmap\n",
     "    ,symbol_type='simple'\n",
-    "    ,colors = 'Greens_r'\n",
+    "    ,colors = 'Blues_r'\n",
     "    ,outline_color = 'Dark2_r'\n",
     "    ,line_width = 0.5\n",
     ");\n",
     "    \n",
-    "wmap\n",
-    "    "
+    "wmap"
    ]
   },
   {
