--- a/SitingStaging/Esri SSURGO Footprints.ipynb
+++ b/SitingStaging/Esri SSURGO Footprints.ipynb
@@ -85,9 +85,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "cannot open 'F:\\SitingStagingCache\\EsriSSURGO\\trg\\Pacific.gdb\\Subbasin'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-4524b980a819>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m     poly = arcpy.da.SearchCursor(\n\u001b[0;32m     10\u001b[0m          \u001b[0min_table\u001b[0m    \u001b[1;33m=\u001b[0m \u001b[0mbasin\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m         \u001b[1;33m,\u001b[0m\u001b[0mfield_names\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"SHAPE@\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m     );\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: cannot open 'F:\\SitingStagingCache\\EsriSSURGO\\trg\\Pacific.gdb\\Subbasin'"
+     ]
+    }
+   ],
    "source": [
     "cursor = arcpy.da.InsertCursor(\n",
     "     fp_full + os.sep + fp_layer\n",
