--- a/SitingStaging/Esri SSURGO Download.ipynb
+++ b/SitingStaging/Esri SSURGO Download.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,25 +26,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "OBJECTID    2206\n",
        "HUC_8       2206\n",
        "Link        2206\n",
-       "OBJECTID    2206\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ssurgo_url = r\"https://services.arcgis.com/P3ePLMYs2RVChkJx/arcgis/rest/services/DownloaderBasinsv2/FeatureServer/0/query\";\n",
+    "ssurgo_url = r\"https://services.arcgis.com/P3ePLMYs2RVChkJx/arcgis/rest/services/DownloaderBasinsv2/FeatureServer/0\";\n",
     "ssurgo_lyr = FeatureLayer(ssurgo_url);\n",
     "\n",
     "sdf = None;\n",
@@ -76,11 +76,11 @@
    "source": [
     "src = r\"F:\\SitingStagingCache\\EsriSSURGO\\src\";\n",
     "if not os.path.exists(src):\n",
-    "    os.mkdir(src);\n",
+    "    os.makedirs(src);\n",
     "    \n",
     "trg = r\"F:\\SitingStagingCache\\EsriSSURGO\\trg\";\n",
     "if not os.path.exists(trg):\n",
-    "    os.mkdir(trg);\n",
+    "    os.makedirs(trg);\n",
     "    \n",
     "tmp = tempfile.gettempdir();\n"
    ]
@@ -170,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
