--- a/SitingStaging/Esri SSURGO Footprints.ipynb
+++ b/SitingStaging/Esri SSURGO Footprints.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,8 @@
     "import os;\n",
     "from arcgis.gis import GIS;\n",
     "from arcgis.mapping import WebMap;\n",
-    "from arcgis.features import SpatialDataFrame\n",
+    "from arcgis.features import FeatureLayer,Table;\n",
+    "from arcgis.features import SpatialDataFrame;\n",
     "import pandas as pd;\n",
     "import arcpy;\n"
    ]
@@ -53,9 +54,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ready'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "if not os.path.exists(fp_full):\n",
     "    arcpy.CreateFileGDB_management(fp_path,fp_fgdb);\n",
@@ -80,44 +92,79 @@
     "         ['resource_name' ,'TEXT' ,'Resource_Name'  ,255, None,'']\n",
     "        ,['resource_path' ,'TEXT' ,'Resource_Path'  ,255, None,'']\n",
     "     ]\n",
-    ");"
+    ");\n",
+    "\n",
+    "'ready'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "cannot open 'F:\\SitingStagingCache\\EsriSSURGO\\trg\\Pacific.gdb\\Subbasin'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-4524b980a819>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m     poly = arcpy.da.SearchCursor(\n\u001b[0;32m     10\u001b[0m          \u001b[0min_table\u001b[0m    \u001b[1;33m=\u001b[0m \u001b[0mbasin\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m         \u001b[1;33m,\u001b[0m\u001b[0mfield_names\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"SHAPE@\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m     );\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: cannot open 'F:\\SitingStagingCache\\EsriSSURGO\\trg\\Pacific.gdb\\Subbasin'"
-     ]
+     "data": {
+      "text/plain": [
+       "'footprints generated'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "huc8_url = r\"https://watersgeo.epa.gov/arcgis/rest/services/Support/HydrologicUnits/MapServer/14\";\n",
+    "huc8_lyr = FeatureLayer(huc8_url);\n",
+    "\n",
     "cursor = arcpy.da.InsertCursor(\n",
     "     fp_full + os.sep + fp_layer\n",
     "    ,[\"resource_name\",\"resource_path\",\"SHAPE@\"]\n",
     ");\n",
     "\n",
     "for item in resources:\n",
-    "    basin = fp_trg + os.sep + item + os.sep + \"Subbasin\";\n",
     "    \n",
-    "    poly = arcpy.da.SearchCursor(\n",
-    "         in_table    = basin\n",
-    "        ,field_names = [\"SHAPE@\"]\n",
-    "    );\n",
+    "    if item == \"Pacific.gdb\":\n",
     "    \n",
-    "    for row in poly:\n",
-    "        shp = row[0];\n",
-    "    \n",
-    "    cursor.insertRow([item,basin,shp]);\n",
+    "        huc8_qry = huc8_lyr.query(\n",
+    "             where              = \"huc8 IN ('22030000','22010000','22020000')\"\n",
+    "            ,out_fields         = \"huc8\"\n",
+    "            ,return_count_only  = False\n",
+    "        );\n",
+    "        \n",
+    "        sdf = huc8_qry.sdf;\n",
+    "        \n",
+    "        for index, row in sdf.iterrows():\n",
+    "            \n",
+    "            if row.huc8 == \"22030000\":\n",
+    "                pacname = \"AmericanSamoa\";\n",
+    "            elif row.huc8 == \"22010000\":\n",
+    "                pacname = \"Guam\";\n",
+    "            elif row.huc8 == \"22020000\":\n",
+    "                pacname = \"NorthernMarianasIslands\";\n",
+    "\n",
+    "            cursor.insertRow([\n",
+    "                 pacname + '_' + row.huc8\n",
+    "                ,fp_trg + os.sep + item + os.sep + pacname + '_MUPOLYS'\n",
+    "                ,row.SHAPE.as_arcpy\n",
+    "            ]);\n",
+    "        \n",
+    "    else:\n",
+    "        basin = fp_trg + os.sep + item + os.sep + \"Subbasin\";\n",
+    "\n",
+    "        poly = arcpy.da.SearchCursor(\n",
+    "             in_table    = basin\n",
+    "            ,field_names = [\"SHAPE@\"]\n",
+    "        );\n",
+    "\n",
+    "        for row in poly:\n",
+    "            shp = row[0];\n",
+    "\n",
+    "        cursor.insertRow([\n",
+    "             item[:-4]\n",
+    "            ,fp_trg + os.sep + item + os.sep + \"MapUnits\"\n",
+    "            ,shp\n",
+    "        ]);\n",
     "\n",
     "if cursor:\n",
     "    del cursor;\n",
@@ -149,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
