--- a/SitingStaging/NED 13ArcSec Footprints.ipynb
+++ b/SitingStaging/NED 13ArcSec Footprints.ipynb
@@ -141,9 +141,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cb981766390a4c65aa5bc0505d41e255",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "MapView(layout=Layout(height='400px', width='100%'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"map-static-img-preview-76d3d92a-a212-4971-b00a-b57b7c09fe84\"><img src=\"\"></img></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "gis = GIS();\n",
     "sdf = pd.DataFrame.spatial.from_featureclass(fp_full + os.sep + fp_layer);\n",
