--- a/SitingStaging/NLCD2016 Download.ipynb
+++ b/SitingStaging/NLCD2016 Download.ipynb
@@ -40,11 +40,11 @@
    "source": [
     "src = r\"F:\\SitingStagingCache\\NLCD2016\\src\";\n",
     "if not os.path.exists(src):\n",
-    "    os.mkdir(src);\n",
+    "    os.makedirs(src);\n",
     "    \n",
     "trg = r\"F:\\SitingStagingCache\\NLCD2016\\trg\";\n",
     "if not os.path.exists(trg):\n",
-    "    os.mkdir(trg);\n"
+    "    os.makedirs(trg);\n"
    ]
   },
   {
@@ -130,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
