--- a/SitingStaging/NED 13ArcSec Download.ipynb
+++ b/SitingStaging/NED 13ArcSec Download.ipynb
@@ -73,11 +73,11 @@
    "source": [
     "src = r\"F:\\USGS\\NED13\\src\";\n",
     "if not os.path.exists(src):\n",
-    "    os.mkdir(src);\n",
+    "    os.makedirs(src);\n",
     "    \n",
     "trg = r\"F:\\USGS\\NED13\\trg\";\n",
     "if not os.path.exists(trg):\n",
-    "    os.mkdir(trg);\n",
+    "    os.makedirs(trg);\n",
     "    "
    ]
   },
@@ -226,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
