adjusted for mr pesky

--- a/CANC/CANC.ipynb
+++ b/CANC/CANC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f04fa06e",
+   "id": "17fd972b",
    "metadata": {},
    "source": [
     "## Tiger State Geometry Fetch for North Carolina"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "600730db",
+   "id": "32421729",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "a8228c35",
+   "execution_count": 48,
+   "id": "22ae63ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,8 +174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "d9cc4c25",
+   "execution_count": 49,
+   "id": "b06fa8ea",
    "metadata": {},
    "outputs": [
     {
@@ -187,6 +187,10 @@
       "  generating bbox for NC...\n",
       "\n",
       "\"bbox\":[-84.32182099999994,33.75287800000007,-75.40011899999996,36.588137000000074]\n",
+      "\n",
+      "  Generating bbox for buffered state polygon...\n",
+      "\n",
+      "\"bbox\":[-84.76249142699999,33.39013356500004,-74.95625628499994,36.95068971100005]\n",
       "\n"
      ]
     }
@@ -251,19 +255,33 @@
     "    ,buffer_distance_or_field = '25 mile'\n",
     "    ,method                   = 'GEODESIC'\n",
     ");\n",
+    "\n",
+    "print(\"  Generating bbox for buffered state polygon...\")\n",
+    "with arcpy.da.SearchCursor(\n",
+    "     in_table    = geopkg + os.sep + 'tigerNCbuf25m'\n",
+    "    ,field_names = ['stusab','SHAPE@']\n",
+    ") as scursor:\n",
+    "    \n",
+    "    for row in scursor:\n",
+    "        stusab = row[0]\n",
+    "        shape  = row[1];\n",
+    "        \n",
+    "        print('');\n",
+    "        print('\"bbox\":[' + str(shape.extent.XMin) + ',' + str(shape.extent.YMin) + ',' + str(shape.extent.XMax) + ',' + str(shape.extent.YMax) + ']')\n",
+    "        print('');\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "4dcec4d0",
+   "execution_count": 47,
+   "id": "b4c9f3b1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab39a6b9b9df4ecd9368a66a35bdb844",
+       "model_id": "28d3d3e1477e4fd8bf2e28f96abaaaca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -277,7 +295,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-static-img-preview-dbf66a61-1bc3-4737-9646-149336df1cbf\"><img src=\"\"></img></div>"
+       "<div class=\"map-static-img-preview-ec469398-6c25-47ae-9563-07e8ff58e949\"><img src=\"\"></img></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -289,7 +307,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-html-embed-preview-dbf66a61-1bc3-4737-9646-149336df1cbf\"></div>"
+       "<div class=\"map-html-embed-preview-ec469398-6c25-47ae-9563-07e8ff58e949\"></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -304,13 +322,13 @@
     "\n",
     "map1 = gis.map('North Carolina');\n",
     "df1 = pd.DataFrame.spatial.from_featureclass(geopkg + os.sep + 'tigerNC');\n",
-    "df1.spatial.plot(map_widget = map1)\n",
+    "df1.spatial.plot(map_widget = map1);\n",
     "\n",
     "df2 = pd.DataFrame.spatial.from_featureclass(geopkg + os.sep + 'tigerNCbbox');\n",
-    "df2.spatial.plot(map_widget = map1)\n",
+    "df2.spatial.plot(map_widget = map1);\n",
     "\n",
     "df3 = pd.DataFrame.spatial.from_featureclass(geopkg + os.sep + 'tigerNCbuf25m');\n",
-    "df3.spatial.plot(map_widget = map1)\n",
+    "df3.spatial.plot(map_widget = map1);\n",
     "\n",
     "map1"
    ]
@@ -318,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87de477a",
+   "id": "b61dcd3a",
    "metadata": {},
    "outputs": [],
    "source": []
