pesky again, brad

--- a/CANC/CANC.ipynb
+++ b/CANC/CANC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "17fd972b",
+   "id": "545cf829",
    "metadata": {},
    "source": [
     "## Tiger State Geometry Fetch for North Carolina"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "32421729",
+   "execution_count": 1,
+   "id": "205c7138",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "22ae63ae",
+   "execution_count": 2,
+   "id": "7565b864",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,6 +146,31 @@
     "        ,unique     = 'UNIQUE'\n",
     "    );\n",
     "    \n",
+    "if not arcpy.Exists(geopkg + os.sep + 'tigerNCbuf25mbbox'):\n",
+    "    \n",
+    "    arcpy.management.CreateFeatureclass(\n",
+    "         out_path      = geopkg\n",
+    "        ,out_name      = 'tigerNCbuf25mbbox'\n",
+    "        ,geometry_type = 'POLYGON'\n",
+    "        ,has_m         = 'DISABLED'\n",
+    "        ,has_z         = 'DISABLED'\n",
+    "        ,spatial_reference = arcpy.SpatialReference(4326)\n",
+    "    );\n",
+    "    \n",
+    "    add_fields(\n",
+    "         target = geopkg + os.sep + 'tigerNCbuf25mbbox'\n",
+    "        ,farray = [\n",
+    "             ['stusab'    ,'TEXT'  ,'USPS State Code'  ,2  ,None,None,False]\n",
+    "        ]\n",
+    "    );\n",
+    "    \n",
+    "    arcpy.management.AddIndex(\n",
+    "         in_table   = geopkg + os.sep + 'tigerNCbuf25mbbox'\n",
+    "        ,fields     = ['stusab']\n",
+    "        ,index_name = 'STUSAB_PK'\n",
+    "        ,unique     = 'UNIQUE'\n",
+    "    );\n",
+    "    \n",
     "with arcpy.da.UpdateCursor(\n",
     "     in_table    = geopkg + os.sep + 'tigerNC'\n",
     "    ,field_names = ['stusab','SHAPE@']\n",
@@ -169,13 +194,21 @@
     "    \n",
     "    for row in ucursor:\n",
     "        ucursor.deleteRow();\n",
+    "        \n",
+    "with arcpy.da.UpdateCursor(\n",
+    "     in_table    = geopkg + os.sep + 'tigerNCbuf25mbbox'\n",
+    "    ,field_names = ['stusab','SHAPE@']\n",
+    ") as ucursor:\n",
+    "    \n",
+    "    for row in ucursor:\n",
+    "        ucursor.deleteRow();\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "b06fa8ea",
+   "execution_count": 3,
+   "id": "6f398c8a",
    "metadata": {},
    "outputs": [
     {
@@ -266,22 +299,41 @@
     "        stusab = row[0]\n",
     "        shape  = row[1];\n",
     "        \n",
-    "        print('');\n",
-    "        print('\"bbox\":[' + str(shape.extent.XMin) + ',' + str(shape.extent.YMin) + ',' + str(shape.extent.XMax) + ',' + str(shape.extent.YMax) + ']')\n",
-    "        print('');\n",
+    "        with arcpy.da.InsertCursor(\n",
+    "             in_table    = geopkg + os.sep + 'tigerNCbuf25mbbox'\n",
+    "            ,field_names = ['stusab','SHAPE@']\n",
+    "        ) as icursor:\n",
+    "        \n",
+    "            pt1 = arcpy.Point(shape.extent.XMin,shape.extent.YMin);\n",
+    "            pt2 = arcpy.Point(shape.extent.XMax,shape.extent.YMin);\n",
+    "            pt3 = arcpy.Point(shape.extent.XMax,shape.extent.YMax);\n",
+    "            pt4 = arcpy.Point(shape.extent.XMin,shape.extent.YMax);\n",
+    "            \n",
+    "            bbox = arcpy.Polygon(arcpy.Array([\n",
+    "                 pt1\n",
+    "                ,pt2\n",
+    "                ,pt3\n",
+    "                ,pt4\n",
+    "                ,pt1\n",
+    "            ]));\n",
+    "        \n",
+    "            icursor.insertRow([stusab,bbox]);\n",
+    "            print('');\n",
+    "            print('\"bbox\":[' + str(shape.extent.XMin) + ',' + str(shape.extent.YMin) + ',' + str(shape.extent.XMax) + ',' + str(shape.extent.YMax) + ']')\n",
+    "            print('');\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "b4c9f3b1",
+   "execution_count": 10,
+   "id": "8e3f67af",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28d3d3e1477e4fd8bf2e28f96abaaaca",
+       "model_id": "ff55807edd0e4582aea5100977fe2bbb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -295,7 +347,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-static-img-preview-ec469398-6c25-47ae-9563-07e8ff58e949\"><img src=\"\"></img></div>"
+       "<div class=\"map-static-img-preview-3175789b-fd00-48e6-a9db-ab6b1ae82dc8\"><img src=\"\"></img></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -307,7 +359,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-html-embed-preview-ec469398-6c25-47ae-9563-07e8ff58e949\"></div>"
+       "<div class=\"map-html-embed-preview-3175789b-fd00-48e6-a9db-ab6b1ae82dc8\"></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -330,13 +382,16 @@
     "df3 = pd.DataFrame.spatial.from_featureclass(geopkg + os.sep + 'tigerNCbuf25m');\n",
     "df3.spatial.plot(map_widget = map1);\n",
     "\n",
+    "df4 = pd.DataFrame.spatial.from_featureclass(geopkg + os.sep + 'tigerNCbuf25mbbox');\n",
+    "df4.spatial.plot(map_widget = map1);\n",
+    "\n",
     "map1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b61dcd3a",
+   "id": "55eeb1bd",
    "metadata": {},
    "outputs": [],
    "source": []
